<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Requester</string>
    <string name="action_settings">Settings</string>
    <string name="infotextstart">Bitte geben sie unten nach den folgenden Regeln Ihren 5 stelligen Code ein!</string>
    <string name="startActivity_rule1">1. Dritter Buchstabe des Vornamens der Mutter </string>
    <string name="startActivity_rule2">2. Dritter Buchstabe des Vornamens des Vaters </string>   
	<string name="startActivity_rule3">3. Dritter Buchstabe des Geburtsortes</string>
	<string name="startActivity_rule4">4. Dritter Buchstabe der aktuellen Straße</string>
	<string name="startActivity_rule5">5. Dritter Buchstabe des Geburtsmonats</string>

	<string name="general_databaseError">Datenbank-Fehler. Bitte wenden Sie sich an den zuständigen Administrator!</string>
    <string name="buttonstart">Bestätigen</string>
    <string name="startcodehint">code</string>
    
    
    
    
    
    <string name="AlarmDialog">Bitte ausfüllen.</string>
    <string name="button_now">Jetzt</string>
    <string name="button_later">Später</string>

    <!-- American Clock -->
    <string name="button_9am">09:00</string>
    <string name="button_10am">10:00</string>
    <string name="button_11am">11:00</string>
    <string name="button_12pm">12:00</string>
    <string name="button_1pm">13:00</string>
    <string name="button_2pm">14:00</string>
    <string name="button_3pm">15:00</string>
    <string name="button_4pm">16:00</string>
    <string name="button_5pm">17:00</string>
    <string name="button_6pm">18:00</string>
    <string name="button_7pm">19:00</string>
    <string name="button_8pm">20:00</string>
    <string name="button_9pm">21:00</string>
    <string name="button_10pm">22:00</string>
    <string name="button_11pm">23:00</string>
    <string name="timeTableDescription">Wählen Sie in jeder Zeile eine Alarmzeit aus</string>
    <string name="button_done">Fertig</string>
    <string name="timetableToastMessage">Zeiten wurden nicht richtig ausgewählt</string>
    <string name="timetableActivity_buttonCancel">Abbruch</string>
    
    
    <!-- surveyActivity -->
    <string name="surveyActivity_contactQuestion">Wie viele soziale Kontakte hatten Sie seit dem letzten Alarm am %1$s um %2$s Uhr?</string>
    <string name="surveyActivity_lastAnsweredDate">dd.MM.</string><string name="surveyActivity_lastAnsweredTime">HH</string><string name="surveyActivity_minutes"> Minuten</string>
    <string name="surveyActivity_hours"> Stunden</string>
    <string name="surveyActivity_missingInput">Es sind nicht alle Felder ausgefüllt!</string>
    <string name="surveyActivity_numberOfContacts"> Anzahl</string>
    <string name="surveyActivity_tooMuchMinutes">Soviel Zeit ist nicht seit dem letzten Termin vergangen.</string>
    <string name="surveyActivity_time_question">Schätzen Sie bitte zusätzlich die Dauer der Kontakte ein.</string>
    <string name="surveyActivity_invalidMinutes">Für die Minuten bitte eine Zahl zwischen 0 und 59 angeben.</string>
    <string name="surveyActivity_contactsMinutesMismatch">Die angegebene Zeit passt nicht zu der Anzahl der Kontakte!</string>
   
    <string name="title_activity_info">InfoActivity</string>

    <!-- InfoActivity -->
    <string name="infoActivity_AlarmLabel">Nächster Alarm</string>
    <string name="infoActivity_AlarmPlaceholder">Placeholder</string>
    <string name="infoActivity_TimeDiffLabel">Noch Zeit</string>
    <string name="infoActivity_ChangeAlarm">Alarmzeiten</string>
    <string name="infoActivity_Close">Beenden</string>
    
    

</resources>