<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="11sp"
    tools:context=".InfoActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
      

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="65dip"
            android:layout_height="65dip"
            android:src="@drawable/applogo"
            android:layout_marginRight="5dip"
             />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/headerlogo" />
    </LinearLayout>

    <TextView
        android:id="@+id/infoActivity_nextAlarmLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/infoActivity_AlarmLabel"
        android:textColor="@color/lettering" 
        android:textSize="15sp" />

    <TextView
        android:id="@+id/infoActivity_alarmTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/infoActivity_AlarmPlaceholder"
        android:textColor="@color/lettering"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/infoActivity_timeLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/infoActivity_TimeDiffLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/lettering"
        android:textSize="15sp"  />

    <TextView
        android:id="@+id/infoActivity_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/infoActivity_AlarmPlaceholder"
        android:textColor="@color/lettering"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/infoActivity_timetableButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/infoActivity_ChangeAlarm" />

        <Button
            android:id="@+id/infoActivity_quitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/infoActivity_Close" />

    </LinearLayout>

</LinearLayout>