<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical"
    android:weightSum="100"
    android:padding="11sp" >

       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="65dip"
            android:layout_height="65dip"
            android:src="@drawable/applogo"
            android:layout_marginRight="5dip"
             />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/headerlogo" />
    </LinearLayout>

    <TextView
        android:id="@+id/contactQuestionView"
        android:layout_weight="40"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mainbackground"
        android:textColor="@color/lettering"
        android:gravity="center"
        android:layout_margin="20dip"
        android:text="@string/surveyActivity_contact_question"
        />


    <EditText
        android:id="@+id/numberOfContacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="8"
        android:gravity="center"
       	android:hint ="@string/surveyActivity_numberOfContacts"
        android:inputType="number" />

    <TextView
        android:id="@+id/timeQuestion"
      	android:layout_weight="25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mainbackground"
        android:textColor="@color/lettering"
        android:gravity="center"
        android:layout_margin="30dip"
        android:text="@string/surveyActivity_time_question" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <EditText
            android:id="@+id/hours"
            android:layout_weight="50"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="8"
            android:inputType="number"
            android:gravity="center"
            android:hint ="@string/surveyActivity_hours" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:maxLength="2"
            android:inputType="number"
            android:gravity="center"
            android:hint ="@string/surveyActivity_minutes"/>

    </LinearLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:gravity="center"
        android:text="@string/buttonstart" />

</LinearLayout>